--- a/demo.html
+++ b/demo.html
@@ -24,7 +24,7 @@
                 <div class="control-group">
                     <div class="controls">
                         <div class="input-group input-group-lg">
-                            <!--                        <span class="input-group-addon" id="sizing-addon1"> <span class="glyphicon glyphicon-user" aria-hidden="true"></span></span>-->
+                            <span class="input-group-addon" id="sizing-addon1"> <span class="glyphicon glyphicon-user" aria-hidden="true"></span></span>
                             <input type="text" id="fullname" name="fullname" class="form-control" placeholder="Your name">
                         </div>
                     </div>
@@ -35,7 +35,7 @@
                 <div class="control-group">
                     <div class="controls">
                         <div class="input-group input-group-lg">
-                            <!--                        <span class="input-group-addon" id="sizing-addon1"> <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></span>-->
+                            <span class="input-group-addon" id="sizing-addon1"> <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></span>
                             <input type="email" name="username" id="username-reg" class="form-control" placeholder="Your email address">
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                 <div class="control-group">
                     <div class="controls">
                         <div class="input-group input-group-lg">
-                            <!--                        <span class="input-group-addon" id="sizing-addon1"> <span class="glyphicon glyphicon-lock" aria-hidden="true"></span></span>-->
+                            <span class="input-group-addon" id="sizing-addon1"> <span class="glyphicon glyphicon-lock" aria-hidden="true"></span></span>
                             <input type="password" name="password" id="password" class="form-control" placeholder="Your password">
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                 <div class="control-group">
                     <div class="controls">
                         <div class="input-group input-group-lg">
-                            <!--                        <span class="input-group-addon" id="sizing-addon1"> <span class="glyphicon glyphicon-lock" aria-hidden="true"></span></span>-->
+                            <span class="input-group-addon" id="sizing-addon1"> <span class="glyphicon glyphicon-lock" aria-hidden="true"></span></span>
                             <input type="password" name="confirm_password" id="repass" class="form-control" placeholder="Confirm your Password">
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                 <div class="control-group">
                     <div class="controls">
                         <div class="input-group input-group-lg">
-                            <!--                        <span class="input-group-addon" id="sizing-addon1"> <span class="glyphicon glyphicon-phone" aria-hidden="true"></span></span>-->
+                            <span class="input-group-addon" id="sizing-addon1"> <span class="glyphicon glyphicon-phone" aria-hidden="true"></span></span>
                             <input type="text" name="mobile" id="phone" class="form-control" placeholder="Mobile Number">
                         </div>
                     </div>
@@ -86,47 +86,49 @@
     </div>
 
     <script>
-        $(document).ready(function () {
-
-            $('#contact-form').validate({
-                rules: {
-                    fullname: {
-                        minlength: 4,
-                        required: true
-
-                    },
-                    username: {
-                        required: true,
-                        email: true
-                    },
-                    password: {
-                        minlength: 8,
-                        required: true
-                    },
-                    confirm_password: {
-                        minlength: 8,
-                        required: true
-                    },
-                    mobile: {
-                        minlength: 11,
-                        required: true
-                    }
+        $('#contact-form').validate({
+            rules: {
+                fullname: {
+                    minlength: 4,
+                    required: true
                 },
-                highlight: function (element) {
-                    $(element).closest('.control-group').removeClass('success').addClass('error');
+                username: {
+                    required: true,
+                    email: true
                 },
-                success: function (element) {
-                    element.text('OK!').addClass('valid')
-                        .closest('.control-group').removeClass('error').addClass('success');
+                password: {
+                    minlength: 8,
+                    required: true
+                },
+                confirm_password: {
+                    minlength: 8,
+                    required: true,
+                    equalTo: "#password"
+                },
+                mobile: {
+                    minlength: 11,
+                    required: true
                 }
-            });
-            $('#contact-form').on('keyup blur', function () {
-                if ($('#contact-form').valid()) {
-                    $('button.btn').prop('disabled', false);
-                } else {
-                    $('button.btn').prop('disabled', 'disabled');
-                }
-            });
+            },
+            highlight: function (element) {
+                $(element).closest('.control-group').removeClass('success').addClass('error');
+
+            },
+            success: function (element) {
+                element.text('OK!').addClass('valid')
+                    .closest('.control-group').removeClass('error').addClass('success');
+            },
+            errorPlacement: function (error, element) {
+                error.insertAfter(element.parent());
+            }
+        });
+
+        $('#contact-form').on('keyup blur', function () {
+            if ($('#contact-form').valid()) {
+                $('button.btn').prop('disabled', false);
+            } else {
+                $('button.btn').prop('disabled', 'disabled');
+            }
 
         });
     </script>
