--- a/demo.html
+++ b/demo.html
@@ -107,7 +107,8 @@
                 },
                 mobile: {
                     minlength: 11,
-                    required: true
+                    required: true,
+                    number: true
                 }
             },
             highlight: function (element) {
