--- a/demo.html
+++ b/demo.html
@@ -107,6 +107,7 @@
                 },
                 mobile: {
                     minlength: 11,
+                    maxlength: 11,
                     required: true,
                     number: true
                 }
