--- a/demo.html
+++ b/demo.html
@@ -85,6 +85,9 @@
         <div class="col-md-3"></div>
     </div>
  <style>
+        label.error {
+            float: right!important;
+        }
         .controls .error {
             color: red;
         }
